Fix test: remove dates from equals comparision